<?xml version="1.0"?>
<package>
  <name>scalaser</name>
  <version>0.0.1</version>
  <description>The scalaser package</description>
  <maintainer email="mvoellmy@ethz.ch">Miro Voellmy</maintainer>

  <license>ETH</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
 
  <run_depend>message_filters</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sick_tim</run_depend>
  <run_depend>std_msg</run_depend>
  <run_depend>tf</run_depend> 


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
